# zerolib

./: .envrc  .gitignore  .gitmodules  .taplo.toml  .yamllint.yml  Makefile  README.md  default.nix  dev.nix  flake.nix  lib.nix  overlay.nix  pre-commit.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check.yml  test-report.yml
.stubs/: msgpack.pyi  wrapt.pyi
src/zerolib/: __init__.py  base.py  command.py  const.py  context.py  dic.py  exc.py  graph.py  logconfig.py  logconfig.yml  logging.py  logging.yml  loguru_compat.py  serialize.py  util.py
src/zerolib/type/: __init__.py  node.py  struct.py
tests/: .gitignore  __init__.py  conftest.py  test_base.py  test_dic.py  test_serialize.py  test_util.py  whitelist.py
tests/functional/: covcfg.toml  test_command.py
tests/unit/: covcfg.toml  test_context.py  test_dic.py  test_graph.py  test_logging.py  test_serialize.py  test_util.py
tests/unit/type/: test_node.py  test_struct.py
