[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zerolib"
version = "0.1.0"
description = "..."
dependencies = [
  "aiofiles",
  "anyio",
  "atools",
  "contextvars-extras",
  "deepmerge",
  "loguru",
  "msgspec",
  "msgpack",
  "pyyaml",
  "rustworkx[mpl]",
  "tqdm",
  "wrapt",
]

[project.optional-dependencies]
dev = [
  # required by .pyproject
  "toml",
  # typing
  "types-aiofiles",
  "types-appdirs",
  "types-pyyaml",
  "types-toml",
  "types-tqdm",
  # debug
  "pdbpp",
  "ptpython",
  # TODO: include lsp etc. as project dev depends i.e. not from global env
]
test = [
  "beartype",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-random-order",
  "pytest-sugar",
  "typeguard",
]

[tool.coverage.run]
branch = true
data_file = "tests/.coverage"
# pytest-cov fails with pytest-xdist: https://github.com/pytest-dev/pytest-cov/issues/604
# dynamic_context = "test_function"
parallel = true
source = ["."]
omit = [".pyproject/*", ".site/sitecustomize.py", "tests/whitelist.py"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "raise RuntimeError",
  "raise TypeError",
  "pragma: no cover",
  "@overload",
  "pass",
]
fail_under = 100

[tool.coverage.html]
directory = "tests/coverage-html"
show_contexts = true

[tool.coverage.xml]
output = "tests/coverage.xml"

[tool.mypy]
allow_untyped_defs = false
cache_fine_grained = true
check_untyped_defs = true
# left to ruff
disable_error_code = "name-defined,syntax"
ignore_missing_imports = true
show_error_codes = true
strict_optional = false
# nice in theory, practically mypy is fukt and enabling this will lead you down
# an endless trail of casts
# warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = [
  # single quotes is a literal string
  '^/nix/store/.*',
  '^.result.*',
  '^result.*',
]

[tool.pylsp-mypy]
enabled = true
dmypy = true
live_mode = false
report_progress = true

[tool.pytest.ini_options]
addopts = """
  --showlocals
  --no-cov-on-fail
  --tb=short
  --random-order
  --random-order-bucket=global
"""
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
cache_dir = "tests/.cache"
junit_logging = "all"
junit_log_passing_tests = true
tmp_path_retention_policy = "failed"

[tool.ruff]
extend-exclude = [".result*", ".pyproject*", "result*"]
force-exclude = true
output-format = "full"
show-fixes = true
target-version = "py311"

[tool.ruff.lint]
ignore = [
  # pydocstyle
  "D",
  # pylint
  "PL",
  # todo
  "FIX",
  "TD",
  # shadowing a python builtin
  "A001",
  "A002",
  # Missing type annotation for `self` in method
  "ANN101",
  # Missing type annotation for `cls` in classmethod
  "ANN102",
  # Dynamically typed expressions (typing.Any) are disallowed
  "ANN401",
  # Do not catch blind exception: `Exception
  "BLE001",
  # unnecessary dict call
  "C408",
  # Trailing comma missing
  "COM812",
  # commented-out code - selected in pre-commit
  "ERA001",
  # Exception must not use a string literal
  "EM101",
  # Exception must not use an f-string literal
  "EM102",
  # Logging statement uses f-string
  "G004",
  # implicitly concatenated strings - selected in pre-commit
  "ISC001",
  # Private member accessed
  "SLF001",
  # Relative imports from parent modules are banned
  "TID252",
  # Avoid specifying long messages outside the exception class
  "TRY003",
]
select = ["ALL"]
task-tags = ["FIXME", "HACK", "TODO", "TOGO", "XXX"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
# use of assert
"tests/*" = ["S101"]
# imported but unused
"__init__.py" = ["F401"]

[tool.vulture]
exclude = [".pyproject/", ".result*/", "result*/"]

[tool.yamlfix]
explicit_start = false
line_length = 100
sequence_style = "keep_style"
section_whitelines = 1
